# agent

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  FRONTEND_SPEC.md  GMAIL_TEST_PLAN.md  JIRA_TEST_PLAN.md  README.md  gmail_addon_mcp.py  mcp_config.yaml  pyproject.toml  requirements.txt  run.py  setup_google_auth.py  test_api.py  test_cpq_only.py  test_jira_conversations.py  test_jira_transcript.txt
docs/: AGENT_ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-27-hierarchical-multi-agent.md
docs/superpowers/specs/: 2026-04-27-hierarchical-multi-agent-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BrowserPanel.tsx  ChatPanel.tsx  HumanReviewDialog.tsx  PlanView.tsx  Sidebar.tsx  StepProgress.tsx  TaskPanel.tsx
frontend/src/hooks/: useBrowserStream.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/types/: messages.ts
scripts/: mcp_smoke_test.py
src/dqe_agent/: __init__.py  api.py  config.py  engine.py  graph.py  guardrails.py  llm.py  prompts.py  state.py
src/dqe_agent/agent/: __init__.py  executor.py  loop.py  master.py  nodes.py  notes.py  orchestrator.py  planner.py  progress.py  state.py  verifier.py
src/dqe_agent/agents/: __init__.py  browser_agent.py  calendar_agent.py  email_agent.py  jira_agent.py  people_agent.py
src/dqe_agent/browser/: dom_agent.py  manager.py  webrtc.py
tests/: test_agents.py  test_browser_session_input.py  test_graph.py  test_jira_unit.py  test_orchestrator.py
workflows/: opportunity_to_quote.yaml
(+23 files in other folders)
